--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
   "dependencies": {
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
-  }
+    "nodemon": "^3.1.9",
+    "siteecommerce": "file:"
+  },
+  "name": "siteecommerce",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YassGOAT/siteEcommerce.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/YassGOAT/siteEcommerce/issues"
+  },
+  "homepage": "https://github.com/YassGOAT/siteEcommerce#readme",
+  "description": "Site ecommerce "
 }
